<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_text"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_above="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4"
        android:hint="@string/password_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_text"
        android:id="@+id/button3"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
